@@ -2547,13 +2547,15 @@ If optional RESERVE-PROP is non-nil, text property is reserved."
       '(progn
 	 ;; Under Emacs 19, 20 or XEmacs, `ffap-url-regexp' won't match
 	 ;; to https urls by default.
-	 (if (and (not (string-match ffap-url-regexp "https://foo"))
+	 (if (and ffap-url-regexp
+		  (not (string-match ffap-url-regexp "https://foo"))
 		  (string-match "\\((\\|\\\\|\\)\\(http\\)\\(\\\\|\\|\\\\)\\)"
 				ffap-url-regexp))
 	     (setq ffap-url-regexp (replace-match "\\1\\2s?\\3"
 						  nil nil ffap-url-regexp)))
 	 ;; Add nntp:.
-	 (if (and (not (string-match ffap-url-regexp "nntp://bar"))
+	 (if (and ffap-url-regexp
+		  (not (string-match ffap-url-regexp "nntp://bar"))
 		  (string-match "\\(\\\\(news\\\\(post\\\\)\\?:\\)\\(\\\\|\\)"
 				ffap-url-regexp))
 	     (setq ffap-url-regexp (replace-match "\\1\\\\|nntp:\\2"
